--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,7 @@
 /* CSS file imports */
-
+@import url(./components/footer.css);
+@import url(./abstracts/colors.css);
+@import url(./abstracts/fonts.css);
 /* CSS Resets */
 *,
 *::before,
@@ -7,9 +9,22 @@
   box-sizing: border-box;
 }
 
+img,
+iframe {
+  display: block;
+  width: 100%;
+  margin: auto;
+}
+
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 /* Main layout Styles */
+main,
+header,
+footer {
+  max-width: 1500px;
+  margin: auto;
+}
