--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,8 @@
 @import url(./components/footer.css);
 @import url(./abstracts/colors.css);
 @import url(./abstracts/fonts.css);
+@import url(./components/header.css);
+@import url(./components/tech-grid.css);
 /* CSS Resets */
 *,
 *::before,
@@ -19,6 +21,11 @@ iframe {
 body {
   margin: 0;
   font-family: 'Lato', sans-serif;
+  background: var(--color-bg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
+  height: max-content;
 }
 
 /* Main layout Styles */
@@ -27,4 +34,9 @@ header,
 footer {
   max-width: 1500px;
   margin: auto;
+}
+
+.view {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
