--- a/src/styles/abstracts/colors.css
+++ b/src/styles/abstracts/colors.css
@@ -1,7 +1,9 @@
 :root {
-  --color-primary: #7f0836;
-  --color-secondary: #000000;
-  --color-bg: linear-gradient(180deg, #ffb4c4 0%, #feca98 100%);
-  --color-contrast: #ffffff;
-  --color-hover: #ffb4c4;
+  --color-primary: #e3d18d;
+  --color-secondary: #ffffff;
+  --color-bg: #7e87aa;
+
+  --boxshadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
