--- a/src/styles/abstracts/fonts.css
+++ b/src/styles/abstracts/fonts.css
@@ -4,3 +4,27 @@
   --font-reg: 400;
   --font-bold: 900;
 }
+
+h1 {
+  font-size: 30px;
+  color: var(--color-primary);
+  font-weight: var(--font-bold);
+}
+
+h2 {
+  font-size: 24px;
+  color: var(--color-primary);
+  font-weight: var(--font-bold);
+}
+
+h3 {
+  font-size: 18px;
+  color: var(--color-primary);
+  font-weight: var(--font-bold);
+}
+
+p {
+  font-size: 16px;
+  color: var(--color-secondary);
+  font-weight: var(--font-reg);
+}
