added blur to background and about me text

--- a/src/styles/abstracts/colors.css
+++ b/src/styles/abstracts/colors.css
@@ -1,5 +1,6 @@
 :root {
-  --color-primary: #e3d18d;
+  /* --color-primary: #e3d18d; */
+  --color-primary: #f3d253;
   --color-secondary: #ffffff;
   --color-bg: #7e87aa;
 
