--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@
 @import url(./abstracts/fonts.css);
 @import url(./components/header.css);
 @import url(./components/tech-grid.css);
+@import url(./views/about.css);
 /* CSS Resets */
 *,
 *::before,
@@ -21,11 +22,12 @@ iframe {
 body {
   margin: 0;
   font-family: 'Lato', sans-serif;
-  background: url('/public/images/background.svg');
+  background: url('/images/background.svg');
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh;
   height: max-content;
+  backdrop-filter: blur(5px);
 }
 
 /* Main layout Styles */
@@ -37,6 +39,13 @@ footer {
 }
 
 .view {
+  padding: 1em;
+}
+
+.grid {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  margin: auto;
+  justify-content: center;
+  gap: 2em;
 }
