--- a/src/styles/abstracts/fonts.css
+++ b/src/styles/abstracts/fonts.css
@@ -18,13 +18,18 @@ h2 {
 }
 
 h3 {
-  font-size: 18px;
+  font-size: 20px;
   color: var(--color-primary);
   font-weight: var(--font-bold);
 }
 
 p {
-  font-size: 16px;
+  font-size: 18px;
   color: var(--color-secondary);
   font-weight: var(--font-reg);
+}
+
+strong {
+  color: var(--color-primary);
+  --font-bold: 900;
 }
