--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -9,6 +9,7 @@ header .social-links {
   display: flex;
   justify-content: space-evenly;
   gap: 2em;
+  padding-left: 0;
 }
 
 header .nav-items {
