--- a/src/styles/components/tech-grid.css
+++ b/src/styles/components/tech-grid.css
@@ -1,9 +1,8 @@
 .tech-grid {
   display: grid;
-  width: 500px;
-  height: 500px;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  max-width: 500px;
+  max-height: 500px;
+  grid-template-columns: repeat(4, minmax(50px, 1fr));
   justify-content: center;
   border: 1px solid var(--color-bg);
   padding: 0.75em;
@@ -39,10 +38,16 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding: 0.25em;
+}
+
+.tech-grid #box-6 h1 {
+  font-size: clamp(1.125rem, 0.6422rem + 1.5vw, 2rem);
+  margin-top: 1em;
 }
 
 .tech-grid #box-6 h2 {
-  font-size: 20px;
+  font-size: clamp(1rem, 0.7241rem + 1vw, 1.5rem);
 }
 
 .tech-grid #box-7 {
