--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,7 @@
 @import url(./components/header.css);
 @import url(./components/tech-grid.css);
 @import url(./views/about.css);
+@import url(./components/button.css);
 /* CSS Resets */
 *,
 *::before,
