created landing page view

--- a/src/styles/abstracts/colors.css
+++ b/src/styles/abstracts/colors.css
@@ -1,8 +1,8 @@
 :root {
-  /* --color-primary: #e3d18d; */
   --color-primary: #f3d253;
   --color-secondary: #ffffff;
   --color-bg: #7e87aa;
+  --color-black: #1d1b26;
 
   --boxshadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
