--- a/src/styles/abstracts/fonts.css
+++ b/src/styles/abstracts/fonts.css
@@ -24,9 +24,12 @@ h3 {
 }
 
 p {
-  font-size: 18px;
   color: var(--color-secondary);
   font-weight: var(--font-reg);
+  max-width: 500px;
+  margin: 2em auto 0 0;
+  line-height: 1.5em;
+  font-size: 20px;
 }
 
 strong {
