--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -1,12 +1,13 @@
 .btn {
   text-decoration: none;
-  border: 1px solid var(--color-secondary);
+  border: 1px solid var(#000000);
   padding: 1em;
   display: block;
   margin: 2em auto;
   width: max-content;
   border-radius: 5px;
   transition: all 0.3s ease-in-out;
+  box-shadow: var(--boxshadow);
 }
 
 .btn:hover {
@@ -14,9 +15,10 @@
 }
 
 .btn-primary {
-  color: #000000;
+  color: var(--color-black);
   font-size: 20px;
   background-color: var(--color-primary);
+  font-weight: var(--font-bold);
 }
 
 .btn-secondary {
