--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,8 +4,8 @@
 @import url(./abstracts/fonts.css);
 @import url(./components/header.css);
 @import url(./components/tech-grid.css);
-@import url(./views/about.css);
 @import url(./components/button.css);
+@import url(./views/home.css);
 /* CSS Resets */
 *,
 *::before,
@@ -32,11 +32,23 @@ body {
 }
 
 /* Main layout Styles */
+
+.page-content {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 main,
 header,
 footer {
   max-width: 1500px;
+  width: 100%;
   margin: auto;
+}
+
+main {
+  flex-grow: 1;
 }
 
 .view {
@@ -53,4 +65,8 @@ footer {
   margin: auto;
   justify-content: center;
   gap: 2em;
+}
+
+.sub-title {
+  color: var(--color-secondary);
 }
