--- a/src/styles/components/tech-grid.css
+++ b/src/styles/components/tech-grid.css
@@ -8,6 +8,7 @@
   padding: 0.75em;
   gap: 0.75em;
   background-color: var(--color-bg);
+  align-self: center;
 }
 
 .tech-grid div {
@@ -42,12 +43,7 @@
 }
 
 .tech-grid #box-6 h1 {
-  font-size: clamp(1.125rem, 0.6422rem + 1.5vw, 2rem);
-  margin-top: 1em;
-}
-
-.tech-grid #box-6 h2 {
-  font-size: clamp(1rem, 0.7241rem + 1vw, 1.5rem);
+  font-size: clamp(1.25rem, 0.6422rem + 1.5vw, 2rem);
 }
 
 .tech-grid #box-7 {
