--- a/src/styles/components/overlay.css
+++ b/src/styles/components/overlay.css
@@ -45,7 +45,7 @@
   padding: 1em;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   width: 100%;
-  max-width: 1000px;
+  max-width: 1200px;
   height: 90vh;
   margin: auto;
   position: relative;
@@ -76,6 +76,7 @@
   flex-basis: auto;
   display: flex;
   align-items: center;
+  justify-content: space-evenly;
 }
 
 .overlay-body {
