--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,8 @@
 @import url(./views/about.css);
 @import url(./components/overlay.css);
 @import url(./components/cv.css);
+@import url(./components/projects-grid.css);
+@import url(./components/focused-project.css);
 /* CSS Resets */
 *,
 *::before,
