--- a/src/styles/components/overlay.css
+++ b/src/styles/components/overlay.css
@@ -21,8 +21,8 @@
 .overlay-inner {
   position: fixed;
   left: 0;
-  right: 0;
-  top: 5%;
+  right: 5vw;
+  top: 3%;
   z-index: 11;
   padding: 0 1em;
   visibility: hidden;
@@ -87,4 +87,10 @@
 .overlay-header h1 {
   margin-top: 0;
   margin-bottom: 0;
+}
+
+@media screen and (max-width: 600px) {
+  .overlay-header {
+    display: block;
+  }
 }
