--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -42,3 +42,96 @@ header .social-links img:hover {
 .nav-items.active a {
   color: var(--color-primary);
 }
+
+.hamburger-lines {
+  display: block;
+  height: 26px;
+  width: 32px;
+  position: absolute;
+  top: 17px;
+  left: 20px;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.hamburger-lines .line {
+  display: block;
+  height: 4px;
+  width: 100%;
+  border-radius: 10px;
+  background: var(--color-primary);
+}
+
+.hamburger-lines .line1 {
+  transform-origin: 0% 0%;
+  transition: transform 0.4s ease-in-out;
+}
+
+.hamburger-lines .line2 {
+  transition: transform 0.2s ease-in-out;
+}
+
+.hamburger-lines .line3 {
+  transform-origin: 0% 100%;
+  transition: transform 0.4s ease-in-out;
+}
+
+nav input[type='checkbox']:checked ~ .hamburger-lines .line1 {
+  transform: rotate(45deg);
+}
+
+nav input[type='checkbox']:checked ~ .hamburger-lines .line2 {
+  transform: scaleY(0);
+}
+
+nav input[type='checkbox']:checked ~ .hamburger-lines .line3 {
+  transform: rotate(-45deg);
+}
+
+.checkbox {
+  position: absolute;
+  display: block;
+  height: 32px;
+  width: 32px;
+  top: 20px;
+  left: 20px;
+  z-index: 5;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkbox,
+.hamburger-lines {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .checkbox {
+    display: block;
+  }
+
+  .hamburger-lines {
+    display: flex;
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    background-color: #545b74;
+    padding: 2em 1em;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    width: 200px;
+    box-shadow: var(--boxshadow);
+    transform: translateX(-300px);
+    transition: transform 0.5s ease-in-out;
+    border-radius: 5px;
+  }
+
+  nav input[type='checkbox']:checked ~ .nav-menu {
+    transform: translateX(0);
+  }
+}
