--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,8 @@
 @import url(./components/cv.css);
 @import url(./components/projects-grid.css);
 @import url(./components/focused-project.css);
+@import url(./components/project-filter.css);
+@import url(./views/projects.css);
 /* CSS Resets */
 *,
 *::before,
