--- a/src/styles/components/focused-project.css
+++ b/src/styles/components/focused-project.css
@@ -7,8 +7,15 @@
   margin: 0;
 }
 
+.focused-project .image-container {
+  width: 100%;
+  height: 600px;
+}
+
 .focused-project img {
   border-radius: 10px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 @media screen and (max-width: 600px) {
