--- a/src/styles/components/focused-project.css
+++ b/src/styles/components/focused-project.css
@@ -8,6 +8,8 @@
 }
 
 .focused-project .image-container {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 600px;
 }
@@ -15,7 +17,7 @@
 .focused-project img {
   border-radius: 10px;
   max-width: 100%;
-  max-height: 600px;
+  max-height: 500px;
 }
 
 @media screen and (max-width: 600px) {
@@ -31,6 +33,9 @@
     overflow: auto;
     flex-grow: 0;
     flex-shrink: 0;
+    box-shadow: var(--boxshadow);
+    padding: 0.25em;
+    border-radius: 5px;
   }
 
   .focused-project .image-container {
@@ -38,7 +43,7 @@
   }
 
   .focused-project .image-container img {
-    max-height: 100%;
+    max-height: 95%;
     width: auto;
   }
 }
