--- a/src/styles/abstracts/fonts.css
+++ b/src/styles/abstracts/fonts.css
@@ -23,7 +23,9 @@ h3 {
   font-weight: var(--font-bold);
 }
 
-p {
+p,
+label,
+input {
   color: var(--color-secondary);
   font-weight: var(--font-reg);
   max-width: 500px;
