--- a/src/styles/components/project-filter.css
+++ b/src/styles/components/project-filter.css
@@ -31,3 +31,31 @@
 .btn-filter.active {
   opacity: 1;
 }
+
+.technology-select {
+  display: none;
+  max-width: 300px;
+  width: 100%;
+  margin: 0.5em auto 0 auto;
+  font-size: 20px;
+  padding: 0.25em;
+  border-radius: 5px;
+  background-color: var(--color-primary);
+}
+
+.technology-select-label {
+  display: none;
+  text-align: center;
+  margin: auto;
+}
+
+@media screen and (max-width: 600px) {
+  .filter .button-container {
+    display: none;
+  }
+
+  .technology-select,
+  .technology-select-label {
+    display: block;
+  }
+}
